src/main/java/com/example/kaboocampostproject/global/error/BaseErrorCode.java
package com.example.kaboocampostproject.global.error;

import org.springframework.http.HttpStatus;

public interface BaseErrorCode {
    HttpStatus getHttpStatus();
    String getCode();
    String getMessage();
}
